Implement file http cache storage
Does not limit cache size