@@ -8,7 +8,7 @@ import net.vinrobot.mcemote.client.imageio.NativeFrame;
 import net.vinrobot.mcemote.client.imageio.NativeImageIO;
 
 import java.io.IOException;
-import java.net.URL;
+import java.net.URI;
 import java.util.Map;
 
 @Environment(EnvType.CLIENT)
@@ -38,6 +38,6 @@ public class FFZEmote implements Emote {
 	public NativeFrame[] loadFrames() throws IOException {
 		final Map<String, String> urls = this.emoticon.urls();
 		final String url = urls.containsKey("1") ? urls.get("1") : urls.values().iterator().next();
-		return NativeImageIO.readAll(new URL(url));
+		return NativeImageIO.readAll(URI.create(url));
 	}
 }
